Move starter scripts to installer directory
All scripts formerly stored in the bin directory have been moved to
the installer/scripts directory. Upon install, the scripts will be
copied to the bin directory, with the environment-agnostic paths
replaced with installation-specific paths. The installer/scripts
folder will retain the environment-agnostic versions.